add swagger config and refactor code